--- a/overclocked-frontend/public/index.html
+++ b/overclocked-frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>icon.png" />
-    <title>Over Clocked - Your Way To Build Your Dream PC</title>
+    <title>OverClocked - Your Way To Build Your Dream PC</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
@@ -13,6 +13,17 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
+    />
+    <meta
+      data-vue-meta="1"
+      data-vmid="description"
+      name="description"
+      content="Whether you love first-person shooters or hunting for treasure in pixelated paradises, there are times when you’ve wanted a little more from your gaming experience. Maybe you want to experience your virtual worlds in higher definition, or you’re curious about exactly what makes your computer run the way it does."
+    />
+    <meta
+      data-vue-meta="1"
+      name="keywords"
+      content="pc, personal computer, over clocked, overclocked, over-clocked, games, computer, laptop, workstation"
     />
   </head>
   <body>
